# camera_rtsp_control

./: README.md  capture.py  captureRMTP.py  player.py  rtmp.py  rtmpRK.py  rtsp.py  rtspCamera.py
camera_rtsp_publisher/: CMakeLists.txt
camera_rtsp_publisher/src/: main.cpp
camera_rtsp_subscribe/: CMakeLists.txt
camera_rtsp_subscribe/src/: main.cpp
